layout breakpoint corrected

--- a/src/ui/layout/layout-04/_make-g--layout-04.scss
+++ b/src/ui/layout/layout-04/_make-g--layout-04.scss
@@ -71,11 +71,6 @@
                 @media all and ($viewport-type: $breakpoint) {
                     height: auto;
                     min-height: 0;
-                    @if $change-order-reponsive == true {
-                        margin-bottom: $measure * 5;
-                    } @else {
-                        margin-bottom: 0;
-                    }
                 }
             }
 
@@ -138,11 +133,10 @@
         &__wrapper {
             @if $breakpoint {
                 @media all and ($viewport-type: $breakpoint) {
-                    padding: 0;
                     @if $change-order-reponsive == true {
-                        margin-bottom: $measure * 5;
+                        padding: 0 0 $measure*5;
                     } @else {
-                        margin-bottom: 0;
+                        padding: $measure*5 0 0;
                     }
                 }
             }
