--- a/src/ui/layout/layout-07/_make-g--layout-07.scss
+++ b/src/ui/layout/layout-07/_make-g--layout-07.scss
@@ -82,11 +82,6 @@
                 @media all and ($viewport-type: $breakpoint) {
                     height: auto;
                     min-height: 0;
-                    @if $change-order-reponsive == true {
-                        margin-bottom: $measure * 5;
-                    } @else {
-                        margin-bottom: 0;
-                    }
                 }
             }
 
@@ -149,11 +144,10 @@
         &__wrapper {
             @if $breakpoint {
                 @media all and ($viewport-type: $breakpoint) {
-                    padding: 0;
                     @if $change-order-reponsive == true {
-                        margin-bottom: $measure * 5;
+                        padding: 0 0 $measure*5;
                     } @else {
-                        margin-bottom: 0;
+                        padding: $measure*5 0 0;
                     }
                 }
             }
